--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -50,15 +50,32 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
   border: none;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-top: 5px;
+  padding-bottom: 0px;
   a {
+    border-radius: 10px;
     border-bottom: solid;
     border-width: 1px;
     border-color: #A7A8A7;
     font-weight: 100;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    &:hover {
+      -webkit-filter: invert(20%);
+      filter: invert(10%);
+    }
   }
+}
+
+div.col-white a:hover {
+  color: white !important;
 }
 
 
