--- a/app/views/shared/navbar/_navbar_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_white.html.erb
@@ -11,10 +11,6 @@
   top: -40px !important;
 }
 
-a:hover {
-  opacity: 0.7% !important;
-  color: white !important;
-}
 
 .dropdown button {
   color: white;
@@ -26,6 +22,7 @@ a:hover {
 .btn-navbar{
     background-color: rgba(0,0,0,0.7) !important;
   }
+
 
 </style>
 
@@ -42,7 +39,7 @@ a:hover {
   </div>
   <div class="dropdown">
     <button class="dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars"></i></button>
-    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+    <div class="dropdown-menu dropdown-menu-right col-white" aria-labelledby="dropdownMenuButton">
       <%= link_to "Home", root_path, class: "dropdown-item btn-navbar #{current_class?(root_path)}" %>
       <%= link_to "Beers", beers_path, class: "dropdown-item btn-navbar #{current_class?(beers_path)}" %>
       <%= link_to "Breweries", breweries_path, class: "dropdown-item btn-navbar #{current_class?(breweries_path)}" %>
