--- a/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
@@ -16,15 +16,13 @@
   border: none;
   box-shadow: none;
 }
-a:hover {
-  opacity: 0.7% !important;
-  color: white !important;
-}
 
 
 .btn-navbar{
     background-color: rgba(0,0,0,0.7) !important;
   }
+
+
 
 </style>
 
@@ -45,7 +43,7 @@ a:hover {
 
   <div class="dropdown">
     <button class="dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars"></i></button>
-    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+    <div class="dropdown-menu dropdown-menu-right col-white" aria-labelledby="dropdownMenuButton">
       <%= link_to "Brewer registration", new_user_registration_path, class: "dropdown-item btn-navbar #{current_class?(new_user_registration_path)}"%>
       <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item btn-navbar #{current_class?(new_user_registration_path)}" %>
       <%= link_to "Login", new_user_session_path, class: "dropdown-item btn-navbar #{current_class?(new_user_session_path)}" %>
