still trying to fix the facebook photo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <title>TapIntoIt -- Don't just drink your beer, tap into it!</title>
     <meta name="description" content="Your premier source of beer knowledge.">
     <meta property="og:title" content="TapIntoIt - Experience your beer">
-    <meta property="og:image" url="https://res.cloudinary.com/discwhk4f/image/upload/v1553079101/craft_beer.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/discwhk4f/image/upload/v1553079101/craft_beer.jpg">
     <meta property="og:description" content="TapIntoIt is the premier way you can not just drink beer, but experience it.">
     <meta property="og:site_name" content="TapIntoIt"/>
     <%= favicon_link_tag asset_path('logo.png') %>
