brewery style page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@
 body {
   background-color: white;
 }
+
+a:hover {
+ text-decoration: none !important;
+}
 /*
  *= require_tree .
  *= require_self
