--- a/app/assets/stylesheets/breweries.scss
+++ b/app/assets/stylesheets/breweries.scss
@@ -1,6 +1,30 @@
 .breweries-title {
   text-align: center;
+  border-bottom:2px solid #E67E22;
+  padding:10px;
+  // margin-left:20px;
+  // margin-right:20px;
+  margin: 20px;
+  h2 {
+    font-weight:400;
+    font-size:30px;
+    color:#E67E22;
+  }
 }
+
+.map-title {
+  text-align:center;
+  border-bottom: 2px solid #E67E22;
+  padding: 10px;
+  margin: 20px 20px 0px 20px;
+  h2 {
+    font-weight: 400;
+    font-size: 30px;
+    color: #E67E22;
+  }
+
+}
+
 .breweries-wrapper {
   background-color: white;
 }
@@ -39,10 +63,10 @@
   // border-radius: 5px;
   box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.5);
   transition: 0.4s ease;
-  &:hover {
-    transform: scale(1.2);
-    transition: 0.4s ease;
-  }
+  // &:hover {
+  //   transform: scale(1.2);
+  //   transition: 0.4s ease;
+  // }
 }
 
 .brewery-card-name {
