--- a/app/assets/stylesheets/brewery.scss
+++ b/app/assets/stylesheets/brewery.scss
@@ -1,14 +1,37 @@
 .brewery-title {
   text-align: center;
-  margin-top: 30px;
+  margin: 20px;
+  border-bottom:2px solid #E67E22;
+  padding:10px;
   max-width: 400px;
   h2 {
+    font-weight: 400;
     font-size: 30px;
+    color:#E67E22;
   }
-  h3 {
-    font-size: 20px;
+}
+
+.brewery-description, .brewery-find-description {
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 15px;
+  p {
+    font-size: 18px;
     font-weight: 100;
     margin-top: 30px;
+  }
+}
+
+
+
+.brewery-beers-title, .brewery-find-title {
+  text-align: center;
+  margin: 0px 20px 20px 20px;
+  border-bottom:2px solid #E67E22;
+  h3 {
+    font-weight: 300;
+    font-size: 25px;
+    color:#E67E22;
   }
 }
 
@@ -37,8 +60,10 @@
   align-items: center;
   padding-bottom: 20px;
   padding-top: 20px;
-  h4 {
-    margin-bottom: 26px;
+  h2 {
+    font-weight: 400;
+    font-size: 30px;
+    color:#E67E22;
   }
   // display: inline-block;
 }
@@ -131,10 +156,10 @@
   background-repeat: no-repeat;
   justify-content: flex-start;
   transition: 0.4s ease;
-  &:hover {
-  transform: scale(1.05);
-  transition: 0.4s ease;
-  }
+  // &:hover {
+  // transform: scale(1.05);
+  // transition: 0.4s ease;
+  // }
 
 }
 
