--- a/app/views/shared/navbar/_navbar_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_black.html.erb
@@ -32,7 +32,7 @@
     <% end %>
     <div class="search-form">
       <%= form_tag(beers_path, method: :get) do%>
-      <%= text_field_tag(:search, params[:search],  placeholder: 'Search for a beer...') %>
+      <%= text_field_tag(:search, params[:search],  placeholder: 'Beer') %>
       <% end %>
     </div>
   </div>
