--- a/app/assets/stylesheets/notifs.scss
+++ b/app/assets/stylesheets/notifs.scss
@@ -1,12 +1,18 @@
 .notification-container {
-
+  margin-left: 0px;
+  margin-right: 0px;
+  font-size: 14px;
   padding: 15px;
   display: flex;
   justify-content: space-around;
   height: 100px;
   align-items: center;
+  img {
+    margin-right: 15px;
+  }
   a.notification-link {
     color: black;
+    font-weight: 300;
   }
   p {
 
@@ -14,6 +20,26 @@
     margin-bottom: 0;
     flex-grow: 1;
   }
+}
+
+.kill-margin {
+  margin: 0 !important;
+}
+
+.kill-padding {
+  padding: 0 !important;
+}
+
+.lil-padding {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.fullscreen {
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .add-friend-btn {
@@ -53,4 +79,5 @@ div.notification-container:nth-child(even) {
 
 .timestamp {
   font-weight: 100;
+  margin-left: 15px;
 }
