--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -14,12 +14,12 @@
            <!--  <div class='brewery-card-description'>
               <%= brewery.description %>
             </div> -->
-            <div class='brewery-card-address'>
+            <!-- <div class='brewery-card-address'>
               <%= brewery.address %><br>
               <% if current_user  %>
                 <%= brewery.distance_from([current_user.lat, current_user.lng]).round(2) %> km away
               <% end %>
-            </div>
+            </div> -->
           </div>
         </div>
         <% end %>
