--- a/app/assets/stylesheets/breweries.scss
+++ b/app/assets/stylesheets/breweries.scss
@@ -1,26 +1,24 @@
 .breweries-title {
   text-align: center;
-  border-bottom:2px solid #E67E22;
+  border-bottom:2px solid black;
+  margin:30px;
   padding:10px;
-  // margin-left:20px;
-  // margin-right:20px;
-  margin: 20px;
   h2 {
-    font-weight:400;
+    font-weight:500;
     font-size:30px;
-    color:#E67E22;
+    color:black;
   }
 }
 
 .map-title {
   text-align:center;
-  border-bottom: 2px solid #E67E22;
+  border-bottom: 2px solid black;
   padding: 10px;
-  margin: 20px 20px 0px 20px;
+  margin:50px 20px 0px 20px;
   h2 {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 30px;
-    color: #E67E22;
+    color: black;
   }
 
 }
@@ -40,7 +38,7 @@
 
 .brewery-card {
   color: white;
-  margin: 35px;
+  margin: 20px;
   position: relative;
 }
 
@@ -58,8 +56,8 @@
 
 .brewery-card-image {
   background-size: cover;
-  width: 300px;
-  height: 500px;
+  width: 370px;
+  height: 575px;
   // border-radius: 5px;
   box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.5);
   transition: 0.4s ease;
@@ -72,7 +70,7 @@
 .brewery-card-name {
   position: absolute;
   left: 10px;
-  top: 10px;
+  top: 40px;
   font-size: 26px;
   font-weight: 500;
 }
