--- a/app/views/batches/new.html.erb
+++ b/app/views/batches/new.html.erb
@@ -29,13 +29,13 @@
             <%= f.input :steptwelve, label: "Step Twelve:", placeholder: "Type additional step here" %>
             <%= f.input :steptwelvedescription, label: "Step Twelve Description:", placeholder: "Type additional description here" %>
             <%= f.input :ingredientone, label: "Ingredient One:", input_html: { value: "Water" } %>
-            <%= f.input :ingredientonedesc, label: "Type:", input_html: { value: "Spa Natural Mineral Water. Origin: Belgium." } %>
+            <%= f.input :ingredientonedesc, label: "Type:", input_html: { value: "Spa Natural Mineral Water. Origin: " } %>
             <%= f.input :ingredienttwo, label: "Ingredient Two:", input_html: { value: "Grain" } %>
-            <%= f.input :ingredienttwodesc, label: "Type:", input_html: { value: "BESTMALZ Biscuit Malt. Origin: Germany." } %>
+            <%= f.input :ingredienttwodesc, label: "Type:", input_html: { value: "BESTMALZ Biscuit Malt. Origin: " } %>
             <%= f.input :ingredientthree, label: "Ingredient Three:", input_html: { value: "Hops" } %>
-            <%= f.input :ingredientthreedesc, label: "Type:", input_html: { value: "Citra Leaf Hops- features higher alpha acids and total oil contents with a low percentage of co-humulone. Origin: USA." } %>
+            <%= f.input :ingredientthreedesc, label: "Type:", input_html: { value: "Citra Leaf Hops- features higher alpha acids and total oil contents with a low percentage of co-humulone. Origin: " } %>
             <%= f.input :ingredientfour, label: "Ingredient Four:", input_html: { value: "Yeast" } %>
-            <%= f.input :ingredientfourdesc, label: "Type:", input_html: { value: "Danstar American West Coast Yeast." } %>
+            <%= f.input :ingredientfourdesc, label: "Type:", input_html: { value: "Danstar American West Coast Yeast. Origin: " } %>
             <%= f.input :ingredientfive, label: "Ingredient Five:" %>
             <%= f.input :ingredientfivedesc, label: "Type:" %>
             <%= f.input :ingredientsix, label: "Ingredient Six:" %>
