--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -7,10 +7,10 @@
       <div>
         <p><%= raw " <i class='fas fa-star'></i> " * @beer.rating.round %></p>
       </div>
-      <div class="beer-title-show">
-        <h3><%= @beer.name %></h3>
+      <div class="beer-title-header">
+        <h2><%= @beer.name %></h2>
       </div>
-      <hr/>
+
     </div>
     <div class="col-sm-12 col-lg-6">
       <div class="left-myself">
