--- a/app/views/batches/new.html.erb
+++ b/app/views/batches/new.html.erb
@@ -14,10 +14,10 @@
             <%= f.input :stepfourdescription, label: "Step Four Description:", input_html: { value: "Wort is boiled, followed by the adding of hops." } %>
             <%= f.input :stepfive, label: "Step Five:", input_html: { value: "Wort Separation & Cooling" } %>
             <%= f.input :stepfivedescription, label: "Step Five Description:", input_html: { value: "Malt and hop particles are removed from the wort as the wort cools." } %>
-            <%= f.input :stepsix, label: "Step Six:", input_html: { value: "Primary fermentation" } %>
+            <%= f.input :stepsix, label: "Step Six:", input_html: { value: "Primary Fermentation" } %>
             <%= f.input :stepsixdescription, label: "Step Six Description:", input_html: { value: "Yeast is added to the wort to convert sugar into alcohol and to create both flavor and carbon dioxide." } %>
             <%= f.input :stepseven, label: "Step Seven:", input_html: { value: "Secondary Fermentation" } %>
-            <%= f.input :stepsevendescription, label: "Step Seven Description:", input_html: { value: "Type additional description here" } %>
+            <%= f.input :stepsevendescription, label: "Step Seven Description:", input_html: { value: "Beer reaches maximum maturity." } %>
             <%= f.input :stepeight, label: "Step Eight:", placeholder: "Type additional step here" %>
             <%= f.input :stepeightdescription, label: "Step Eight Description:", placeholder: "Type additional description here" %>
             <%= f.input :stepnine, label: "Step Nine:", placeholder: "Type additional step here" %>
@@ -29,13 +29,13 @@
             <%= f.input :steptwelve, label: "Step Twelve:", placeholder: "Type additional step here" %>
             <%= f.input :steptwelvedescription, label: "Step Twelve Description:", placeholder: "Type additional description here" %>
             <%= f.input :ingredientone, label: "Ingredient One:", input_html: { value: "Water" } %>
-            <%= f.input :ingredientonedesc, label: "Type:", input_html: { value: "Spa Natural Mineral Water. Origin: " } %>
+            <%= f.input :ingredientonedesc, label: "Type:", input_html: { value: "Spa Natural Mineral Water" } %>
             <%= f.input :ingredienttwo, label: "Ingredient Two:", input_html: { value: "Grain" } %>
-            <%= f.input :ingredienttwodesc, label: "Type:", input_html: { value: "BESTMALZ Biscuit Malt. Origin: " } %>
+            <%= f.input :ingredienttwodesc, label: "Type:", input_html: { value: "BESTMALZ Biscuit Malt" } %>
             <%= f.input :ingredientthree, label: "Ingredient Three:", input_html: { value: "Hops" } %>
-            <%= f.input :ingredientthreedesc, label: "Type:", input_html: { value: "Citra Leaf Hops- features higher alpha acids and total oil contents with a low percentage of co-humulone. Origin: " } %>
+            <%= f.input :ingredientthreedesc, label: "Type:", input_html: { value: "Citra Leaf Hops- features higher alpha acids and total oil contents with a low percentage of co-humulone" } %>
             <%= f.input :ingredientfour, label: "Ingredient Four:", input_html: { value: "Yeast" } %>
-            <%= f.input :ingredientfourdesc, label: "Type:", input_html: { value: "Danstar American West Coast Yeast. Origin: " } %>
+            <%= f.input :ingredientfourdesc, label: "Type:", input_html: { value: "Danstar American West Coast Yeast" } %>
             <%= f.input :ingredientfive, label: "Ingredient Five:" %>
             <%= f.input :ingredientfivedesc, label: "Type:" %>
             <%= f.input :ingredientsix, label: "Ingredient Six:" %>
