--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -1,13 +1,14 @@
-<div>
-  <img class="beer-photo-on-batch" src='<%= cl_image_path(@beer.photo) %>' style="height: 350px; display: flex; flex-direction: row; align-items: center;">
-</div>
 <div class="batch-title">
   <h1><%= @batch.beer.name %></h1>
 </div>
 
 <div class="under-title">
-  <p>Your beer was bottled on <strong><%= @batch.bottled_date.strftime("%B %d, %Y") %></strong> by <strong><%= @batch.brewery.name %>.</strong></p><br>
+  <p>Your beer was bottled on <strong><%= @batch.bottled_date.strftime("%B %d, %Y") %></strong> by <strong><%= @batch.brewery.name %>.</strong></p>
 </div>
+
+<div class="batch-show-photo">
+  <img class="beer-photo-on-batch" src='<%= cl_image_path(@beer.photo) %>'>
+</div><br><br>
 
 <!-- <h2>Your beer's brewing process:</h2><br>
 <li><strong>Description: </strong><%= @batch.description %></li> -->
@@ -16,25 +17,25 @@
     <h3>Primary Ingredients</h3>
   </div>
   <div class="batch-list">
-  <p><strong><i class="fas fa-tint"></i> <%= @batch.ingredientone %> </strong><br><%= @batch.ingredientonedesc %>🇧🇪<br></p>
-  <p><strong><i class="fas fa-seedling"></i> <%= @batch.ingredienttwo %> </strong><br><%= @batch.ingredienttwodesc %>🇩🇪<br></p>
-  <p><strong><i class="fas fa-spa"></i> <%= @batch.ingredientthree %> </strong><br><%= @batch.ingredientthreedesc %>🇺🇸<br></p>
-  <p><strong><i class="fas fa-bread-slice"></i> <%= @batch.ingredientfour %> </strong><br><%= @batch.ingredientfourdesc %>🇺🇸<br><br></p>
-  </div>
-  <div class="batch-info-titles">
-    <h3>Brewing Process</h3>
-  </div>
-  <div class=batch-brewing-info>
-  <p><strong>Brewing Start Date: </strong><%= @batch.brewingstart.strftime("%B %d, %Y") %><br><br></p>
+  <p><strong><i class="fas fa-tint"></i> <%= @batch.ingredientone %> </strong><br><%= @batch.ingredientonedesc %> 🇧🇪<br></p>
+  <p><strong><i class="fas fa-seedling"></i> <%= @batch.ingredienttwo %> </strong><br><%= @batch.ingredienttwodesc %> 🇩🇪<br></p>
+  <p><strong><i class="fas fa-spa"></i> <%= @batch.ingredientthree %> </strong><br><%= @batch.ingredientthreedesc %> 🇺🇸<br></p>
+  <p><strong><i class="fas fa-bread-slice"></i> <%= @batch.ingredientfour %> </strong><br><%= @batch.ingredientfourdesc %> 🇺🇸<br><br></p>
+
+    <div class="batch-info-titles">
+      <h3>Brewing Process</h3>
+    </div>
+  <p><strong>Brewing Start Date: </strong><br><%= @batch.brewingstart.strftime("%B %d, %Y") %><br></p>
+  <p><strong>Magician (brewer): </strong><br><%= @batch.brewer %><br></p>
   <p><strong>1. <%= @batch.stepone %>: </strong><br><%= @batch.steponedescription %><br></p>
   <p><strong>2. <%= @batch.steptwo %>: </strong><br><%= @batch.steptwodescription %><br></p>
   <p><strong>3. <%= @batch.stepthree %>: </strong><br><%= @batch.stepthreedescription %><br></p>
   <p><strong>4. <%= @batch.stepfour %>: </strong><br><%= @batch.stepfourdescription %><br></p>
   <p><strong>5. <%= @batch.stepfive %>: </strong><br><%= @batch.stepfivedescription %><br></p>
   <p><strong>6. <%= @batch.stepsix %>: </strong><br><%= @batch.stepsixdescription %><br></p>
-  <p><strong>7. <%= @batch.stepseven %>: </strong><br><%= @batch.stepsevendescription %>.<br><br></p>
-  <p><strong>Total Quantity Produced: </strong><%= @batch.quantity %><br></p>
-  <p><strong> Date of Bottling: </strong><%= @batch.bottled_date.strftime("%B %d, %Y") %><br><br></p>
+  <p><strong>7. <%= @batch.stepseven %>: </strong><br><%= @batch.stepsevendescription %><br></p>
+  <p><strong>Total Quantity Produced: </strong><br><%= @batch.quantity %></p>
+  <p><strong> Date of Bottling: </strong><br><%= @batch.bottled_date.strftime("%B %d, %Y") %><br><br></p>
   </div>
 </div>
 
